tiny/parser/y.output
State 146 conflicts: 1 shift/reduce


Grammar

    0 $accept: Tiny $end

    1 Tiny: PROGRAM Name ':' Consts Types Dclns Body Name '.'

    2 Consts: CONST Consts_1
    3       | ε

    4 Consts_1: ε
    5         | ConstDef ';' Consts_1

    6 ConstDef: Name EQ Constant

    7 Types: TYPEX Types_1
    8      | ε

    9 Types_1: ε
   10        | TypeDef ';' Types_1

   11 TypeDef: Name EQ Type

   12 Dclns: VAR Dclns_1
   13      | ε

   14 Dclns_1: ε
   15        | Dcln ';' Dclns_1

   16 Dcln: Dcln_1

   17 Dcln_1: Name ':' Type
   18       | Name ',' Dcln_1

   19 Type: INTEGER
   20     | BOOLEAN
   21     | CHAR
   22     | Name
   23     | '(' Type_1

   24 Type_1: Name ')'
   25       | Name ',' Type_1

   26 Body: BEGINX Body_1

   27 Body_1: Statement END
   28       | Statement ';' Body_1

   29 Statement: Name ASSIGNMENT Expression
   30          | OUTPUT '(' Statement_1
   31          | READ '(' Statement_1_1
   32          | IF Expression THEN Statement ELSE Statement
   33          | IF Expression THEN Statement
   34          | WHILE Expression DO Statement
   35          | FOR Name ASSIGNMENT Expression TO Expression DO Statement
   36          | FOR Name ASSIGNMENT Expression DOWNTO Expression DO Statement
   37          | Name SWAP Name
   38          | REPEAT Statement_1_1_1
   39          | LOOP Statement_1_1_1_1
   40          | EXIT
   41          | CASE Expression OF Statement_1_1_1_1_1
   42          | CASE Expression OF Statement_1_1_1_1_1_1
   43          | CASE Expression OF Statement_1_1_1_1_1_1_1
   44          | Body
   45          | ε

   46 Statement_1_1_1_1_1_1_1: OTHERWISE Statement ';' END
   47                        | Caseclause ';' Statement_1_1_1_1_1_1_1

   48 Statement_1_1_1_1_1_1: OTHERWISE Statement END
   49                      | Caseclause ';' Statement_1_1_1_1_1_1

   50 Statement_1_1_1_1_1: END
   51                    | Caseclause ';' Statement_1_1_1_1_1

   52 Statement_1_1_1_1: Statement POOL
   53                  | Statement ';' Statement_1_1_1_1

   54 Statement_1_1_1: Statement UNTIL Expression
   55                | Statement ';' Statement_1_1_1

   56 Statement_1_1: Name ')'
   57              | Name ',' Statement_1_1

   58 Statement_1: OutputItem ')'
   59            | OutputItem ',' Statement_1

   60 Caseclause: CaseValue ':' Statement

   61 CaseValue: Constant DOTDOT Constant
   62          | Constant

   63 Constant: INTEGER_NUM
   64         | CHARACTER
   65         | TRUE
   66         | FALSE
   67         | Name

   68 OutputItem: Expression
   69           | STRING

   70 Expression: Simp_Expr
   71           | Simp_Expr LTE Simp_Expr
   72           | Simp_Expr EQ Simp_Expr
   73           | Simp_Expr NE Simp_Expr
   74           | Simp_Expr GTE Simp_Expr
   75           | Simp_Expr LT Simp_Expr
   76           | Simp_Expr GT Simp_Expr

   77 Simp_Expr: Term
   78          | Simp_Expr '+' Term
   79          | Simp_Expr '-' Term
   80          | Simp_Expr OR Term

   81 Term: Factor
   82     | Term '*' Factor
   83     | Term '/' Factor
   84     | Term AND Factor
   85     | Term MOD Factor

   86 Factor: Power
   87       | '-' Factor
   88       | '+' Factor
   89       | NOT Factor

   90 Power: Primary
   91      | Primary EXP Power

   92 Primary: EOFX
   93        | TRUE
   94        | FALSE
   95        | CHARACTER
   96        | SUCC '(' Expression ')'
   97        | PRED '(' Expression ')'
   98        | ORD '(' Expression ')'
   99        | CHR '(' Expression ')'
  100        | Name
  101        | INTEGER_NUM
  102        | '(' Expression ')'

  103 Name: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 23 30 31 96 97 98 99 102
    ')' (41) 24 56 58 96 97 98 99 102
    '*' (42) 82
    '+' (43) 78 88
    ',' (44) 18 25 57 59
    '-' (45) 79 87
    '.' (46) 1
    '/' (47) 83
    ':' (58) 1 17 60
    ';' (59) 5 10 15 28 46 47 49 51 53 55
    error (256)
    STRING <info> (258) 69
    END <info> (259) 27 46 48 50
    FALSE <info> (260) 66 94
    TO <info> (261) 35
    VAR <info> (262) 12
    IDENTIFIER <info> (263) 103
    CHR <info> (264) 99
    POOL <info> (265) 52
    IF <info> (266) 32 33
    REPEAT <info> (267) 38
    READ <info> (268) 31
    ELSE <info> (269) 32
    UNTIL <info> (270) 54
    SWAP <info> (271) 37
    FOR <info> (272) 35 36
    THEN <info> (273) 32 33
    DOTDOT <info> (274) 61
    OF <info> (275) 41 42 43
    NE <info> (276) 73
    MOD <info> (277) 85
    GT <info> (278) 76
    CHARACTER <info> (279) 64 95
    CASE <info> (280) 41 42 43
    CHAR <info> (281) 21
    WHILE <info> (282) 34
    OUTPUT <info> (283) 30
    EQ <info> (284) 6 11 72
    EXIT <info> (285) 40
    CONST <info> (286) 2
    GTE <info> (287) 74
    PRED <info> (288) 97
    NOT <info> (289) 89
    DO <info> (290) 34 35 36
    BEGINX <info> (291) 26
    BOOLEAN <info> (292) 20
    ORD <info> (293) 98
    AND <info> (294) 84
    TRUE <info> (295) 65 93
    INTEGER_NUM <info> (296) 63 101
    INTEGER <info> (297) 19
    EOFX <info> (298) 92
    EXP <info> (299) 91
    LTE <info> (300) 71
    LOOP <info> (301) 39
    SUCC <info> (302) 96
    OR <info> (303) 80
    LT <info> (304) 75
    OTHERWISE <info> (305) 46 48
    ASSIGNMENT <info> (306) 29 35 36
    TYPEX <info> (307) 7
    PROGRAM <info> (308) 1
    DOWNTO <info> (309) 36


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    Tiny <dlist> (66)
        on left: 1
        on right: 0
    Consts <dlist> (67)
        on left: 2 3
        on right: 1
    Consts_1 <dlist> (68)
        on left: 4 5
        on right: 2 5
    ConstDef <dlist> (69)
        on left: 6
        on right: 5
    Types <dlist> (70)
        on left: 7 8
        on right: 1
    Types_1 <dlist> (71)
        on left: 9 10
        on right: 7 10
    TypeDef <dlist> (72)
        on left: 11
        on right: 10
    Dclns <dlist> (73)
        on left: 12 13
        on right: 1
    Dclns_1 <dlist> (74)
        on left: 14 15
        on right: 12 15
    Dcln <dlist> (75)
        on left: 16
        on right: 15
    Dcln_1 <dlist> (76)
        on left: 17 18
        on right: 16 18
    Type <dlist> (77)
        on left: 19 20 21 22 23
        on right: 11 17
    Type_1 <dlist> (78)
        on left: 24 25
        on right: 23 25
    Body <dlist> (79)
        on left: 26
        on right: 1 44
    Body_1 <dlist> (80)
        on left: 27 28
        on right: 26 28
    Statement <dlist> (81)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 27 28 32 33 34 35 36 46 48 52 53 54 55 60
    Statement_1_1_1_1_1_1_1 <dlist> (82)
        on left: 46 47
        on right: 43 47
    Statement_1_1_1_1_1_1 <dlist> (83)
        on left: 48 49
        on right: 42 49
    Statement_1_1_1_1_1 <dlist> (84)
        on left: 50 51
        on right: 41 51
    Statement_1_1_1_1 <dlist> (85)
        on left: 52 53
        on right: 39 53
    Statement_1_1_1 <dlist> (86)
        on left: 54 55
        on right: 38 55
    Statement_1_1 <dlist> (87)
        on left: 56 57
        on right: 31 57
    Statement_1 <dlist> (88)
        on left: 58 59
        on right: 30 59
    Caseclause <dlist> (89)
        on left: 60
        on right: 47 49 51
    CaseValue <dlist> (90)
        on left: 61 62
        on right: 60
    Constant <dlist> (91)
        on left: 63 64 65 66 67
        on right: 6 61 62
    OutputItem <dlist> (92)
        on left: 68 69
        on right: 58 59
    Expression <dlist> (93)
        on left: 70 71 72 73 74 75 76
        on right: 29 32 33 34 35 36 41 42 43 54 68 96 97 98 99 102
    Simp_Expr <dlist> (94)
        on left: 77 78 79 80
        on right: 70 71 72 73 74 75 76 78 79 80
    Term <dlist> (95)
        on left: 81 82 83 84 85
        on right: 77 78 79 80 82 83 84 85
    Factor <dlist> (96)
        on left: 86 87 88 89
        on right: 81 82 83 84 85 87 88 89
    Power <dlist> (97)
        on left: 90 91
        on right: 86 91
    Primary <dlist> (98)
        on left: 92 93 94 95 96 97 98 99 100 101 102
        on right: 90 91
    Name <dlist> (99)
        on left: 103
        on right: 1 6 11 17 18 22 24 25 29 35 36 37 56 57 67 100


State 0

    0 $accept: • Tiny $end

    PROGRAM  shift, and go to state 1

    Tiny  go to state 2


State 1

    1 Tiny: PROGRAM • Name ':' Consts Types Dclns Body Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 4


State 2

    0 $accept: Tiny • $end

    $end  shift, and go to state 5


State 3

  103 Name: IDENTIFIER •

    $default  reduce using rule 103 (Name)


State 4

    1 Tiny: PROGRAM Name • ':' Consts Types Dclns Body Name '.'

    ':'  shift, and go to state 6


State 5

    0 $accept: Tiny $end •

    $default  accept


State 6

    1 Tiny: PROGRAM Name ':' • Consts Types Dclns Body Name '.'

    CONST  shift, and go to state 7

    $default  reduce using rule 3 (Consts)

    Consts  go to state 8


State 7

    2 Consts: CONST • Consts_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Consts_1)

    Consts_1  go to state 9
    ConstDef  go to state 10
    Name      go to state 11


State 8

    1 Tiny: PROGRAM Name ':' Consts • Types Dclns Body Name '.'

    TYPEX  shift, and go to state 12

    $default  reduce using rule 8 (Types)

    Types  go to state 13


State 9

    2 Consts: CONST Consts_1 •

    $default  reduce using rule 2 (Consts)


State 10

    5 Consts_1: ConstDef • ';' Consts_1

    ';'  shift, and go to state 14


State 11

    6 ConstDef: Name • EQ Constant

    EQ  shift, and go to state 15


State 12

    7 Types: TYPEX • Types_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 9 (Types_1)

    Types_1  go to state 16
    TypeDef  go to state 17
    Name     go to state 18


State 13

    1 Tiny: PROGRAM Name ':' Consts Types • Dclns Body Name '.'

    VAR  shift, and go to state 19

    $default  reduce using rule 13 (Dclns)

    Dclns  go to state 20


State 14

    5 Consts_1: ConstDef ';' • Consts_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Consts_1)

    Consts_1  go to state 21
    ConstDef  go to state 10
    Name      go to state 11


State 15

    6 ConstDef: Name EQ • Constant

    FALSE        shift, and go to state 22
    IDENTIFIER   shift, and go to state 3
    CHARACTER    shift, and go to state 23
    TRUE         shift, and go to state 24
    INTEGER_NUM  shift, and go to state 25

    Constant  go to state 26
    Name      go to state 27


State 16

    7 Types: TYPEX Types_1 •

    $default  reduce using rule 7 (Types)


State 17

   10 Types_1: TypeDef • ';' Types_1

    ';'  shift, and go to state 28


State 18

   11 TypeDef: Name • EQ Type

    EQ  shift, and go to state 29


State 19

   12 Dclns: VAR • Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 14 (Dclns_1)

    Dclns_1  go to state 30
    Dcln     go to state 31
    Dcln_1   go to state 32
    Name     go to state 33


State 20

    1 Tiny: PROGRAM Name ':' Consts Types Dclns • Body Name '.'

    BEGINX  shift, and go to state 34

    Body  go to state 35


State 21

    5 Consts_1: ConstDef ';' Consts_1 •

    $default  reduce using rule 5 (Consts_1)


State 22

   66 Constant: FALSE •

    $default  reduce using rule 66 (Constant)


State 23

   64 Constant: CHARACTER •

    $default  reduce using rule 64 (Constant)


State 24

   65 Constant: TRUE •

    $default  reduce using rule 65 (Constant)


State 25

   63 Constant: INTEGER_NUM •

    $default  reduce using rule 63 (Constant)


State 26

    6 ConstDef: Name EQ Constant •

    $default  reduce using rule 6 (ConstDef)


State 27

   67 Constant: Name •

    $default  reduce using rule 67 (Constant)


State 28

   10 Types_1: TypeDef ';' • Types_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 9 (Types_1)

    Types_1  go to state 36
    TypeDef  go to state 17
    Name     go to state 18


State 29

   11 TypeDef: Name EQ • Type

    IDENTIFIER  shift, and go to state 3
    CHAR        shift, and go to state 37
    BOOLEAN     shift, and go to state 38
    INTEGER     shift, and go to state 39
    '('         shift, and go to state 40

    Type  go to state 41
    Name  go to state 42


State 30

   12 Dclns: VAR Dclns_1 •

    $default  reduce using rule 12 (Dclns)


State 31

   15 Dclns_1: Dcln • ';' Dclns_1

    ';'  shift, and go to state 43


State 32

   16 Dcln: Dcln_1 •

    $default  reduce using rule 16 (Dcln)


State 33

   17 Dcln_1: Name • ':' Type
   18       | Name • ',' Dcln_1

    ':'  shift, and go to state 44
    ','  shift, and go to state 45


State 34

   26 Body: BEGINX • Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 46
    REPEAT      shift, and go to state 47
    READ        shift, and go to state 48
    FOR         shift, and go to state 49
    CASE        shift, and go to state 50
    WHILE       shift, and go to state 51
    OUTPUT      shift, and go to state 52
    EXIT        shift, and go to state 53
    BEGINX      shift, and go to state 34
    LOOP        shift, and go to state 54

    $default  reduce using rule 45 (Statement)

    Body       go to state 55
    Body_1     go to state 56
    Statement  go to state 57
    Name       go to state 58


State 35

    1 Tiny: PROGRAM Name ':' Consts Types Dclns Body • Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 59


State 36

   10 Types_1: TypeDef ';' Types_1 •

    $default  reduce using rule 10 (Types_1)


State 37

   21 Type: CHAR •

    $default  reduce using rule 21 (Type)


State 38

   20 Type: BOOLEAN •

    $default  reduce using rule 20 (Type)


State 39

   19 Type: INTEGER •

    $default  reduce using rule 19 (Type)


State 40

   23 Type: '(' • Type_1

    IDENTIFIER  shift, and go to state 3

    Type_1  go to state 60
    Name    go to state 61


State 41

   11 TypeDef: Name EQ Type •

    $default  reduce using rule 11 (TypeDef)


State 42

   22 Type: Name •

    $default  reduce using rule 22 (Type)


State 43

   15 Dclns_1: Dcln ';' • Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 14 (Dclns_1)

    Dclns_1  go to state 62
    Dcln     go to state 31
    Dcln_1   go to state 32
    Name     go to state 33


State 44

   17 Dcln_1: Name ':' • Type

    IDENTIFIER  shift, and go to state 3
    CHAR        shift, and go to state 37
    BOOLEAN     shift, and go to state 38
    INTEGER     shift, and go to state 39
    '('         shift, and go to state 40

    Type  go to state 63
    Name  go to state 42


State 45

   18 Dcln_1: Name ',' • Dcln_1

    IDENTIFIER  shift, and go to state 3

    Dcln_1  go to state 64
    Name    go to state 33


State 46

   32 Statement: IF • Expression THEN Statement ELSE Statement
   33          | IF • Expression THEN Statement

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 78
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 47

   38 Statement: REPEAT • Statement_1_1_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 46
    REPEAT      shift, and go to state 47
    READ        shift, and go to state 48
    FOR         shift, and go to state 49
    CASE        shift, and go to state 50
    WHILE       shift, and go to state 51
    OUTPUT      shift, and go to state 52
    EXIT        shift, and go to state 53
    BEGINX      shift, and go to state 34
    LOOP        shift, and go to state 54

    $default  reduce using rule 45 (Statement)

    Body             go to state 55
    Statement        go to state 85
    Statement_1_1_1  go to state 86
    Name             go to state 58


State 48

   31 Statement: READ • '(' Statement_1_1

    '('  shift, and go to state 87


State 49

   35 Statement: FOR • Name ASSIGNMENT Expression TO Expression DO Statement
   36          | FOR • Name ASSIGNMENT Expression DOWNTO Expression DO Statement

    IDENTIFIER  shift, and go to state 3

    Name  go to state 88


State 50

   41 Statement: CASE • Expression OF Statement_1_1_1_1_1
   42          | CASE • Expression OF Statement_1_1_1_1_1_1
   43          | CASE • Expression OF Statement_1_1_1_1_1_1_1

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 89
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 51

   34 Statement: WHILE • Expression DO Statement

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 90
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 52

   30 Statement: OUTPUT • '(' Statement_1

    '('  shift, and go to state 91


State 53

   40 Statement: EXIT •

    $default  reduce using rule 40 (Statement)


State 54

   39 Statement: LOOP • Statement_1_1_1_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 46
    REPEAT      shift, and go to state 47
    READ        shift, and go to state 48
    FOR         shift, and go to state 49
    CASE        shift, and go to state 50
    WHILE       shift, and go to state 51
    OUTPUT      shift, and go to state 52
    EXIT        shift, and go to state 53
    BEGINX      shift, and go to state 34
    LOOP        shift, and go to state 54

    $default  reduce using rule 45 (Statement)

    Body               go to state 55
    Statement          go to state 92
    Statement_1_1_1_1  go to state 93
    Name               go to state 58


State 55

   44 Statement: Body •

    $default  reduce using rule 44 (Statement)


State 56

   26 Body: BEGINX Body_1 •

    $default  reduce using rule 26 (Body)


State 57

   27 Body_1: Statement • END
   28       | Statement • ';' Body_1

    END  shift, and go to state 94
    ';'  shift, and go to state 95


State 58

   29 Statement: Name • ASSIGNMENT Expression
   37          | Name • SWAP Name

    SWAP        shift, and go to state 96
    ASSIGNMENT  shift, and go to state 97


State 59

    1 Tiny: PROGRAM Name ':' Consts Types Dclns Body Name • '.'

    '.'  shift, and go to state 98


State 60

   23 Type: '(' Type_1 •

    $default  reduce using rule 23 (Type)


State 61

   24 Type_1: Name • ')'
   25       | Name • ',' Type_1

    ','  shift, and go to state 99
    ')'  shift, and go to state 100


State 62

   15 Dclns_1: Dcln ';' Dclns_1 •

    $default  reduce using rule 15 (Dclns_1)


State 63

   17 Dcln_1: Name ':' Type •

    $default  reduce using rule 17 (Dcln_1)


State 64

   18 Dcln_1: Name ',' Dcln_1 •

    $default  reduce using rule 18 (Dcln_1)


State 65

   94 Primary: FALSE •

    $default  reduce using rule 94 (Primary)


State 66

   99 Primary: CHR • '(' Expression ')'

    '('  shift, and go to state 101


State 67

   95 Primary: CHARACTER •

    $default  reduce using rule 95 (Primary)


State 68

   97 Primary: PRED • '(' Expression ')'

    '('  shift, and go to state 102


State 69

   89 Factor: NOT • Factor

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Factor   go to state 103
    Power    go to state 82
    Primary  go to state 83
    Name     go to state 84


State 70

   98 Primary: ORD • '(' Expression ')'

    '('  shift, and go to state 104


State 71

   93 Primary: TRUE •

    $default  reduce using rule 93 (Primary)


State 72

  101 Primary: INTEGER_NUM •

    $default  reduce using rule 101 (Primary)


State 73

   92 Primary: EOFX •

    $default  reduce using rule 92 (Primary)


State 74

   96 Primary: SUCC • '(' Expression ')'

    '('  shift, and go to state 105


State 75

  102 Primary: '(' • Expression ')'

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 106
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 76

   88 Factor: '+' • Factor

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Factor   go to state 107
    Power    go to state 82
    Primary  go to state 83
    Name     go to state 84


State 77

   87 Factor: '-' • Factor

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Factor   go to state 108
    Power    go to state 82
    Primary  go to state 83
    Name     go to state 84


State 78

   32 Statement: IF Expression • THEN Statement ELSE Statement
   33          | IF Expression • THEN Statement

    THEN  shift, and go to state 109


State 79

   70 Expression: Simp_Expr •
   71           | Simp_Expr • LTE Simp_Expr
   72           | Simp_Expr • EQ Simp_Expr
   73           | Simp_Expr • NE Simp_Expr
   74           | Simp_Expr • GTE Simp_Expr
   75           | Simp_Expr • LT Simp_Expr
   76           | Simp_Expr • GT Simp_Expr
   78 Simp_Expr: Simp_Expr • '+' Term
   79          | Simp_Expr • '-' Term
   80          | Simp_Expr • OR Term

    NE   shift, and go to state 110
    GT   shift, and go to state 111
    EQ   shift, and go to state 112
    GTE  shift, and go to state 113
    LTE  shift, and go to state 114
    OR   shift, and go to state 115
    LT   shift, and go to state 116
    '+'  shift, and go to state 117
    '-'  shift, and go to state 118

    $default  reduce using rule 70 (Expression)


State 80

   77 Simp_Expr: Term •
   82 Term: Term • '*' Factor
   83     | Term • '/' Factor
   84     | Term • AND Factor
   85     | Term • MOD Factor

    MOD  shift, and go to state 119
    AND  shift, and go to state 120
    '*'  shift, and go to state 121
    '/'  shift, and go to state 122

    $default  reduce using rule 77 (Simp_Expr)


State 81

   81 Term: Factor •

    $default  reduce using rule 81 (Term)


State 82

   86 Factor: Power •

    $default  reduce using rule 86 (Factor)


State 83

   90 Power: Primary •
   91      | Primary • EXP Power

    EXP  shift, and go to state 123

    $default  reduce using rule 90 (Power)


State 84

  100 Primary: Name •

    $default  reduce using rule 100 (Primary)


State 85

   54 Statement_1_1_1: Statement • UNTIL Expression
   55                | Statement • ';' Statement_1_1_1

    UNTIL  shift, and go to state 124
    ';'    shift, and go to state 125


State 86

   38 Statement: REPEAT Statement_1_1_1 •

    $default  reduce using rule 38 (Statement)


State 87

   31 Statement: READ '(' • Statement_1_1

    IDENTIFIER  shift, and go to state 3

    Statement_1_1  go to state 126
    Name           go to state 127


State 88

   35 Statement: FOR Name • ASSIGNMENT Expression TO Expression DO Statement
   36          | FOR Name • ASSIGNMENT Expression DOWNTO Expression DO Statement

    ASSIGNMENT  shift, and go to state 128


State 89

   41 Statement: CASE Expression • OF Statement_1_1_1_1_1
   42          | CASE Expression • OF Statement_1_1_1_1_1_1
   43          | CASE Expression • OF Statement_1_1_1_1_1_1_1

    OF  shift, and go to state 129


State 90

   34 Statement: WHILE Expression • DO Statement

    DO  shift, and go to state 130


State 91

   30 Statement: OUTPUT '(' • Statement_1

    STRING       shift, and go to state 131
    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Statement_1  go to state 132
    OutputItem   go to state 133
    Expression   go to state 134
    Simp_Expr    go to state 79
    Term         go to state 80
    Factor       go to state 81
    Power        go to state 82
    Primary      go to state 83
    Name         go to state 84


State 92

   52 Statement_1_1_1_1: Statement • POOL
   53                  | Statement • ';' Statement_1_1_1_1

    POOL  shift, and go to state 135
    ';'   shift, and go to state 136


State 93

   39 Statement: LOOP Statement_1_1_1_1 •

    $default  reduce using rule 39 (Statement)


State 94

   27 Body_1: Statement END •

    $default  reduce using rule 27 (Body_1)


State 95

   28 Body_1: Statement ';' • Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 46
    REPEAT      shift, and go to state 47
    READ        shift, and go to state 48
    FOR         shift, and go to state 49
    CASE        shift, and go to state 50
    WHILE       shift, and go to state 51
    OUTPUT      shift, and go to state 52
    EXIT        shift, and go to state 53
    BEGINX      shift, and go to state 34
    LOOP        shift, and go to state 54

    $default  reduce using rule 45 (Statement)

    Body       go to state 55
    Body_1     go to state 137
    Statement  go to state 57
    Name       go to state 58


State 96

   37 Statement: Name SWAP • Name

    IDENTIFIER  shift, and go to state 3

    Name  go to state 138


State 97

   29 Statement: Name ASSIGNMENT • Expression

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 139
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 98

    1 Tiny: PROGRAM Name ':' Consts Types Dclns Body Name '.' •

    $default  reduce using rule 1 (Tiny)


State 99

   25 Type_1: Name ',' • Type_1

    IDENTIFIER  shift, and go to state 3

    Type_1  go to state 140
    Name    go to state 61


State 100

   24 Type_1: Name ')' •

    $default  reduce using rule 24 (Type_1)


State 101

   99 Primary: CHR '(' • Expression ')'

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 141
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 102

   97 Primary: PRED '(' • Expression ')'

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 142
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 103

   89 Factor: NOT Factor •

    $default  reduce using rule 89 (Factor)


State 104

   98 Primary: ORD '(' • Expression ')'

    FALSE        shift, and go to state 65
    IDENTIFIER   shift, and go to state 3
    CHR          shift, and go to state 66
    CHARACTER    shift, and go to state 67
    PRED         shift, and go to state 68
    NOT          shift, and go to state 69
    ORD          shift, and go to state 70
    TRUE         shift, and go to state 71
    INTEGER_NUM  shift, and go to state 72
    EOFX         shift, and go to state 73
    SUCC         shift, and go to state 74
    '('          shift, and go to state 75
    '+'          shift, and go to state 76
    '-'          shift, and go to state 77

    Expression  go to state 143
    Simp_Expr   go to state 79
    Term        go to state 80
    Factor      go to state 81
    Power       go to state 82
    Primary     go to state 83
    Name        go to state 84


State 105

   96 Primary: SUCC '(' • Expression ')'
